[package]
name = "clia-macaddr"
version = "0.2.0"
edition = "2021"
authors = ["clia <helloclia@gmail.com>"]
description = "Utility methods for MAC address."
repository = "https://github.com/clia/clia-util"
license = "MIT"
readme = "README.md"
categories = ["web-programming"]
keywords = ["mac", "address", "format"]

[dependencies]
mac_address = "1.1"
