[package]
name = "clia-url-qs"
version = "0.1.2"
edition = "2021"
authors = ["clia <helloclia@gmail.com>"]
description = "Utility methods for URL query string."
repository = "https://github.com/clia/clia-util"
license = "MIT"
readme = "README.md"
categories = ["web-programming"]
keywords = ["url", "query", "string", "format"]

[dependencies]
anyhow = "1"
serde = "1"
serde_urlencoded = "0.7"
